--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,3 +4,5 @@ include_trailing_comma=True
 force_grid_wrap=0
 use_parentheses=True
 line_length=88
+
+known_third_party = dj_database_url,django,gunicorn,invoke,modelcluster,pattern_library,raven,taggit,wagtail,wagtailcaptcha
