--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Django==2.1.7
-wagtail==2.4
+Django==2.2
+wagtail==2.6rc1
 psycopg2==2.7.7
 wagtail-django-recaptcha==1.0
-django-pattern-library==0.2.3
+django-pattern-library==0.2.4
 
 # Production dependencies
 whitenoise[brotli]==4.1.2
