--- a/package.json
+++ b/package.json
@@ -105,10 +105,11 @@
     "webpack-cli": "^3.3.5"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "@glidejs/glide": "^3.2.3",
+    "headroom.js": "^0.9.4",
     "js-cookie": "^2.2.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "@babel/polyfill": "^7.4.4"
+    "react-dom": "^16.8.6"
   }
 }
