--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,37 @@
 #
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
+
+.heroku_deploy_job_template: &heroku_deploy_job_definition
+  before_script:
+    # Install cURL and GnuPG to install Heroku CLI.
+    # Install Git to push the code to Heroku. It uses HTTP to push the code.
+    - apt-get update -y
+    - apt-get install -y curl git gnupg
+
+    # Install Heroku CLI.
+    - curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+
+    # Use Heroku credentials that you can add in your project settings on
+    # GitLab. They can be obtained from sysadmin or pwman.
+    - |
+      cat >~/.netrc <<EOF
+      machine api.heroku.com
+        login $HEROKU_EMAIL
+        password $HEROKU_TOKEN
+      machine git.heroku.com
+        login $HEROKU_EMAIL
+        password $HEROKU_TOKEN
+      EOF
+    - chmod 600 ~/.netrc
+
+    # Add Heroku's Git remote using Heroku CLI.
+    - heroku git:remote --app $HEROKU_APP --remote heroku
+  script:
+    # Push to Heroku's Git via HTTP. Heroku always expects you to push to
+    # master.
+    - git push heroku HEAD:master
+
 version: 2
 jobs:
   build:
@@ -55,41 +86,12 @@ jobs:
           path: test-reports
           destination: test-reports
 
-.heroku_deploy_job_template: &heroku_deploy_job_definition
-  before_script:
-    # Install cURL and GnuPG to install Heroku CLI.
-    # Install Git to push the code to Heroku. It uses HTTP to push the code.
-    - apt-get update -y
-    - apt-get install -y curl git gnupg
-
-    # Install Heroku CLI.
-    - curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
-
-    # Use Heroku credentials that you can add in your project settings on
-    # GitLab. They can be obtained from sysadmin or pwman.
-    - |
-      cat >~/.netrc <<EOF
-      machine api.heroku.com
-        login $HEROKU_EMAIL
-        password $HEROKU_TOKEN
-      machine git.heroku.com
-        login $HEROKU_EMAIL
-        password $HEROKU_TOKEN
-      EOF
-    - chmod 600 ~/.netrc
-
-    # Add Heroku's Git remote using Heroku CLI.
-    - heroku git:remote --app $HEROKU_APP --remote heroku
-  script:
-    # Push to Heroku's Git via HTTP. Heroku always expects you to push to
-    # master.
-    - git push heroku HEAD:master
-
   # Deploy to the staging server.
   deploy_staging:
     # We use Debian image because Heroku has a lot of dependencies and is well
     # supported on Debian based distributions.
-    image: debian:stretch
+    docker:
+      - image: debian:stretch
     stage: deploy
     variables:
       HEROKU_APP: rca-staging
