--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
           name: install node dependencies
           command: |
             npm install --quiet
+            npm i rsync
       - run:
           name: compile static assets
           command: |
