Build:prod as per gitlab config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - run:
           name: compile static assets
           command: |
-            npm run build
+            npm run build:prod
       - run:
           name: run tests
           command: |
