Install rsync with apt-get for npm tasks

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            apt-get install rsync
             pip install -r requirements.txt
             pip install -r requirements-dev.txt
       - run:
