--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,11 @@ jobs:
           SECRET_KEY: testingsecretkey
           SECURE_SSL_REDIRECT: false
           ALLOWED_HOSTS: localhost
+          DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
+      - image: circleci/postgres:9.6.2
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle_test
     working_directory: ~/repo
     steps:
       - checkout
