--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,9 @@
         ],
         '@babel/preset-react',
     ],
+    plugins: [
+        '@babel/plugin-proposal-class-properties',
+    ],
     env: {
         test: {
             presets: ['@babel/preset-env', '@babel/preset-react'],
