Add new menu logic and audience links

--- a/rca/project_styleguide/templates/patterns/molecules/navigation/footerlinks.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/footerlinks.yaml
@@ -1,8 +1,11 @@
 context:
   footerlinks:
-    - dummy
-    - dummy
-    - dummy
+    - link:
+      text: 'Footer link'
+      url: '#'
+    - link:
+      text: 'Footer link'
+      url: '#'
 
 tags:
   include_block:
