--- a/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.yaml
@@ -1,10 +1,8 @@
 context:
   footernav:
-    - dummy
-    - dummy
-    - dummy
-
-tags:
-  include_block:
-    footer:
-      template_name: 'patterns/molecules/navigation/blocks/footer_column.html'
+    - value:
+      text: 'Footer nav link'
+      url: '#'
+    - value:
+      text: 'Footer nav link'
+      url: '#'
