--- a/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
@@ -20,3 +20,8 @@ context:
       author: 'Chris Lawton'
       link: 'http://www.torchbox.com'
       course: 'Architecture'
+    - slide:
+      title: 'Albertopolis 550-metre pedestrian tunnel '
+      author: 'Kevin Howbrook'
+      link: 'http://www.torchbox.com'
+      course: 'Design'
