--- a/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/footernav.yaml
@@ -1,8 +1,5 @@
 context:
   footernav:
     - value:
-      text: 'Footer nav link'
-      url: '#'
-    - value:
-      text: 'Footer nav link'
+      text: 'Contact us'
       url: '#'
