--- a/rca/project_styleguide/templates/patterns/organisms/footer/footer.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/footer/footer.yaml
@@ -1,10 +1,10 @@
 tags:
   footernav:
-    "":
-      template_name: "patterns/molecules/navigation/footernav.html"
+    '':
+      template_name: 'patterns/molecules/navigation/footernav.html'
   footerlinks:
-    "":
-      template_name: "patterns/molecules/navigation/footerlinks.html"
+    '':
+      template_name: 'patterns/molecules/navigation/footerlinks.html'
   social_media_links:
     as social_links:
       raw:
