--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@babel/polyfill": "^7.4.4",
     "@glidejs/glide": "^3.2.3",
     "headroom.js": "^0.9.4",
+    "hoverintent": "^2.2.0",
     "js-cookie": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
