Updating slideshow to allow for modifiers

--- a/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
@@ -1,4 +1,5 @@
 context:
+  modifier: 'slideshow--author-info'
   slideshow:
     - slide:
       title: 'Albertopolis 550-metre pedestrian tunnel '
