add more test links

--- a/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/navigation/primarynav.yaml
@@ -17,3 +17,20 @@ context:
             - tertiary_item:
               url: '#'
               text: 'Sub link'
+    - link:
+      url: '#'
+      text: 'Primary link two'
+      secondary_links:
+        - item:
+          url: '#'
+          text: 'Another Sub link'
+        - item:
+          url: '#'
+          text: 'Another Sub link'
+        - item:
+          url: '#'
+          text: 'A Third level link'
+          tertiary_links:
+            - tertiary_item:
+              url: '#'
+              text: 'Sub link'
