--- a/rca/project_styleguide/templates/patterns/molecules/card/card--no-image.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/card/card--no-image.yaml
@@ -1,10 +1,7 @@
 context:
-  page:
-    title: Architecture
-  eventModule:
+  item:
     meta: 'Event'
     title: 'Show 2019: School of Architecture'
     description: '28-29 April'
+    image: false
     link: '#'
-    image: true
-    person: false
