--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.yaml
@@ -1,27 +1,32 @@
 context:
-  related_documents:
-    - document:
-        url: '#'
-        title: 'Some document'
-        filename: 'some_document.pdf'
-    - document:
-        url: '#'
-        title: 'Some other document'
-        filename: 'some_document.pdf'
-  related_pages:
-    - page:
-        live: true
-        specific:
-          title: Page title
-          listing_image: fake
-          listing_title: Item title
-          listing_summary: Some lorem ipsum
+  title: More opportunities to study at the RCA
+  related_sections:
+    - item:
+      title: Related programmes
+    - item:
+      title: Related Courses
+  related_items:
+    - item:
+      title: Architecture
+      degree: MA
+      copy: Architecture at the RCA sets out to inspire design innovation
+    - item:
+      title: City design
+      degree: MA
+      copy: Architecture at the RCA sets out to inspire design innovation
+    - item:
+      title: Environmental acrhitecture
+      degree: MA
+      copy: Architecture at the RCA sets out to inspire design innovation
+
+
+
 
 tags:
   pageurl:
     specific_related_page:
       raw: '#'
   image:
-    specific_related_page.listing_image fill-450x300:
+    specific_related_page.listing_image fill-300x270:
       raw: |
-        <img src="http://via.placeholder.com/450x300" width="450" height="300" alt="Some alt">
+        <img src="//placekitten.com/300/270" alt="kitten" class="related-content__image">
