--- a/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/relatedcontent/relatedcontent.yaml
@@ -8,17 +8,18 @@ context:
       title: Architecture
       degree: MA
       copy: Architecture at the RCA sets out to inspire design innovation
-      img: https://source.unsplash.com/300x270/?architecture
+      img: http://placehold.it/300x270/fff/000
     - item:
       title: City design
       degree: MA
       copy: Architecture at the RCA sets out to inspire design innovation
-      img: https://source.unsplash.com/300x270/?city
+      img: http://placehold.it/300x270/ff5d1c/fff
     - item:
       title: Environmental acrhitecture
       degree: MA
       copy: Architecture at the RCA sets out to inspire design innovation
-      img: https://source.unsplash.com/300x270/?environment
+      img: http://placehold.it/300x270
+
 
 tags:
   pageurl:
