--- a/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/carousel/carousel.yaml
@@ -11,22 +11,20 @@ context:
         image: true
         title: 'Nelly Ben Hayoun'
     - slide:
-      meta: 'Event'
-      title: 'Show 2019: School of Architecture'
-      description: '28-29 April'
+      meta: 'Alumni Story'
+      title: 'A place with a real focus on making'
+      description: 'Since graduating from the RCA, Holly Hendry’s site-responsive sculptures and installations have been exhibited at galleries in London, Liverpool, Manchester, Copenhagen and Berlin. '
       image: true
       link: '#'
       person:
         image: true
         title: 'Holly Hendry'
-        dept: 'Design Interactions'
     - slide:
-      meta: 'Event'
-      title: 'Show 2019: School of Architecture'
-      description: '28-29 April'
+      meta: 'Alumni Story'
+      title: 'Designing the imposible for NASA'
+      description: 'Creating world class experiences that started at the RCA'
       image: true
       link: '#'
       person:
         image: true
-        title: 'Holly Hendry'
-        dept: 'Design Interactions'
+        title: 'Nelly Ben Hayoun'
