add responsive styles and play icons

--- a/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
@@ -1,3 +1,6 @@
+context:
+  caption: Watch inside our architecture studios
+
 tags:
   image:
     curriculum_intro.image fill-900x415 class="image-caption-link__image":
