--- a/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/accordion/accordion.yaml
@@ -1,11 +1,7 @@
 context:
-  accordions:
-    - accordion:
-      title: Accordion title
-      content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam magna justo, sollicitudin sit amet laoreet id, sodales vel metus. Etiam bibendum, augue in porta ultricies, elit sapien fringilla nisl, sit amet fermentum ligula augue nec sapien. Aliquam eu aliquet metus. Donec quis dolor at tellus viverra molestie.'
-    - accordion:
-      title: Accordion 2 title
-      content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam magna justo, sollicitudin sit amet laoreet id, sodales vel metus. Etiam bibendum, augue in porta ultricies, elit sapien fringilla nisl, sit amet fermentum ligula augue nec sapien. Aliquam eu aliquet metus. Donec quis dolor at tellus viverra molestie.'
-    - accordion:
-      title: Accordion 3 title
-      content: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam magna justo, sollicitudin sit amet laoreet id, sodales vel metus. Etiam bibendum, augue in porta ultricies, elit sapien fringilla nisl, sit amet fermentum ligula augue nec sapien. Aliquam eu aliquet metus. Donec quis dolor at tellus viverra molestie.'
+  accordion:
+    heading: Graphic Design
+    preview_text: Extending and disrupting the tools, intent and role of graphic design
+    body: These categories are loose and extend to other genres and approaches, and all students are expected and encouraged to innovate, experiment and take inspiration and influence from the other pathways, alongside the core Programme offer and the wider School.
+    link: '#'
+    link_title: Link title
