--- a/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/slideshow/slideshow.yaml
@@ -2,27 +2,32 @@ context:
   modifier: 'slideshow--author-info'
   slideshow:
     - slide:
-      title: 'Albertopolis 550-metre pedestrian tunnel '
-      author: 'Nick Lee'
-      link: 'http://www.torchbox.com'
-      course: 'Design'
+      value:
+        title: 'Albertopolis 550-metre pedestrian tunnel '
+        author: 'Nick Lee'
+        link: 'http://www.torchbox.com'
+        course: 'Design'
     - slide:
-      title: 'Albertopolis 550-metre pedestrian tunnel '
-      author: 'Chris Lawton'
-      link: 'http://www.torchbox.com'
-      course: 'Architecture'
+      value:
+        title: 'Albertopolis 550-metre pedestrian tunnel '
+        author: 'Chris Lawton'
+        link: 'http://www.torchbox.com'
+        course: 'Architecture'
     - slide:
-      title: 'Albertopolis 550-metre pedestrian tunnel '
-      author: 'Nick Lee'
-      link: 'http://www.torchbox.com'
-      course: 'Design'
+      value:
+        title: 'Albertopolis 550-metre pedestrian tunnel '
+        author: 'Nick Lee'
+        link: 'http://www.torchbox.com'
+        course: 'Design'
     - slide:
-      title: 'Albertopolis 550-metre pedestrian tunnel '
-      author: 'Chris Lawton'
-      link: 'http://www.torchbox.com'
-      course: 'Architecture'
+      value:
+        title: 'Albertopolis 550-metre pedestrian tunnel '
+        author: 'Chris Lawton'
+        link: 'http://www.torchbox.com'
+        course: 'Architecture'
     - slide:
-      title: 'Albertopolis 550-metre pedestrian tunnel '
-      author: 'Kevin Howbrook'
-      link: 'http://www.torchbox.com'
-      course: 'Design'
+      value:
+        title: 'Albertopolis 550-metre pedestrian tunnel '
+        author: 'Kevin Howbrook'
+        link: 'http://www.torchbox.com'
+        course: 'Design'
