Add conditional so no video doesn't break the tabs

--- a/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
@@ -1,6 +1,6 @@
 context:
   caption: Watch inside our architecture studios
-
+  video: True
 tags:
   image:
     curriculum_intro.image fill-900x415 class="image-caption-link__image":
