--- a/rca/project_styleguide/templates/patterns/organisms/news/news.yaml
+++ b/rca/project_styleguide/templates/patterns/organisms/news/news.yaml
@@ -2,7 +2,7 @@ news:
   - item:
     meta: 'Event'
     title: 'Designs for Real Life'
-    description: '6 July 2019 - 4 August 2019'
+    description: '6 July 2019 — 4 August 2019'
     link: '#'
     image: true
     person: false
