Implementation spec for related content over API

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,3 +16,4 @@ nav:
   - Implementation Specs:
       - 'Rebuild Approach': 'implementation-specs/finalised-rebuild-approach.md'
       - 'Programme Page': 'implementation-specs/programme-page.md'
+      - 'Content relationship via API': 'implementation-specs/content-relationships.md'
