--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "hoverintent": "^2.2.0",
     "js-cookie": "^2.2.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "vanilla-lazyload": "^12.0.0"
   }
 }
