Adding lazyload to staff detail

--- a/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/staff-detail/staff-detail.yaml
@@ -9,3 +9,17 @@ tags:
     person.image fill-277x277 class="staff-detail__image":
       raw: |
         <img src="//placekitten.com/277/277" width="277" height="277" class="staff-detail__image" alt="">
+
+
+tags:
+  image:
+    person.image fill-50x50 as imageSmall:
+      target_var: imageSmall
+      raw:
+        url: '//placekitten.com/50/50'
+    person.image fill-277x277 as imageLarge:
+      target_var: imageLarge
+      raw:
+        url: '//placekitten.com/277/277'
+        width: '277'
+        height: '277'
