Image caption link lazy load

--- a/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
+++ b/rca/project_styleguide/templates/patterns/molecules/image-caption-link/image-caption-link.yaml
@@ -1,8 +1,16 @@
 context:
   caption: Watch inside our architecture studios
   video: True
+
 tags:
   image:
-    curriculum_intro.image fill-900x415 class="image-caption-link__image":
-      raw: |
-        <img src="//placekitten.com/900/415" height="415" width="900" alt="" class="image-caption-link__image">
+    curriculum_intro.image fill-80x37 as imageSmall:
+      target_var: imageSmall
+      raw:
+        url: '//placekitten.com/80/37'
+    curriculum_intro.image fill-900x415 as imageLarge:
+      target_var: imageLarge
+      raw:
+        url: '//placekitten.com/900/415'
+        width: '900'
+        height: '415'
