Add fields for the programme curriculum section

--- a/rca/project_styleguide/templates/patterns/atoms/pathway-item/pathway-item.yaml
+++ b/rca/project_styleguide/templates/patterns/atoms/pathway-item/pathway-item.yaml
@@ -1,4 +1,4 @@
 context:
   path:
-    title: 'Graphic Design'
-    body: 'Extending and disrupting the tools, intent and role of graphic design.'
+    heading: 'Graphic Design'
+    preview_text: 'Extending and disrupting the tools, intent and role of graphic design.'
