--- a/package.json
+++ b/package.json
@@ -110,9 +110,11 @@
     "@glidejs/glide": "^3.2.3",
     "headroom.js": "^0.9.4",
     "hoverintent": "^2.2.0",
+    "intersection-observer": "^0.7.0",
     "js-cookie": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "scrollama": "^2.0.1",
     "vanilla-lazyload": "^12.0.0"
   }
 }
