--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "js-cookie": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "rellax": "^1.10.0",
     "scrollama": "^2.0.1",
     "vanilla-lazyload": "^12.0.0"
   }
